--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
   <table cellspacing =10>
     <tr>
       <td>
-        <img src= "C:\Users\bonom\OneDrive\Desktop\Html Project Review\My images\My Image-modified.png" alt="" height="250" width="250">
+        <img src= "My images\My Image-modified.png" alt="" height="250" width="250">
       </td>
       <td>
         <h1>SEVERINO BONOMI</h1>
