--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <table cellspacing =10>
     <tr>
       <td>
-        <img src= "\My images\My Image-modified.png" alt="avatar" height="250" width="250">
+        <img src= "My images\My Image-modified.png" alt="avatar" height="250" width="250">
       </td>
       <td>
         <h1>SEVERINO BONOMI</h1>
