--- a/Contact.html
+++ b/Contact.html
@@ -22,6 +22,6 @@
       <input type="Submit" name="" >
 
     </form>
-    <a href="first.html">Back to home page</a>
+    <a href="index.html">Back to home page</a>
   </body>
 </html>
